--- a/UI/src/app/modules/user-datasets/components/user-data-row/user-data-row.component.html
+++ b/UI/src/app/modules/user-datasets/components/user-data-row/user-data-row.component.html
@@ -201,6 +201,7 @@
 
   <qa-share-user-data [userDataset]="userDataset"
                       [dataManagementGroups]="dataManagementGroups"
+                      [isOpened]="shareDataModalWindow"
                       (openShareDataWindow)="manageSharingWindow($event)">
   </qa-share-user-data>
 
