function renamed to better describe its purpose

--- a/UI/src/app/modules/validation-result/components/publishing/publishing.component.html
+++ b/UI/src/app/modules/validation-result/components/publishing/publishing.component.html
@@ -102,7 +102,7 @@
       <div style="text-align: right">
         <button pButton
                 id="cancel-button"
-                (click)="close()"
+                (click)="handleModalWindow(false)"
                 label="Cancel">
         </button>
         <button pButton
