--- a/UI/src/app/modules/validation-result/components/validation-summary/validation-summary.component.html
+++ b/UI/src/app/modules/validation-result/components/validation-summary/validation-summary.component.html
@@ -209,8 +209,14 @@
           <a target="_blank" href="{{getDoiPrefix()}}{{validationRun.doi }}">{{ validationRun.doi }}</a>.
         </li>
       </ul>
-      <qa-buttons *ngIf="!forComparison && (validationModel.validationRun|async) as validation" [validationList]="false"
-                  [validationRun]="validation" (doUpdate)="update($event)" (openPublishWindow)="handlePublishWindow($event)"></qa-buttons>
+      <qa-buttons *ngIf="!forComparison &&  !validationRun.publishing_in_progress" [validationList]="false"
+                  [validationRun]="validationRun" (doUpdate)="update($event)" (openPublishWindow)="handlePublishWindow($event)"></qa-buttons>
+
+      <div *ngIf="validationRun.publishing_in_progress"
+           style="float: right">
+         <i class="pi pi-spin pi-spinner" style="font-size: 1rem"></i> Publishing in progress...
+      </div>
+
     </div>
   </p-panel>
 
