not needed variable removed

--- a/UI/src/app/modules/validation-result/components/buttons/buttons.component.html
+++ b/UI/src/app/modules/validation-result/components/buttons/buttons.component.html
@@ -173,7 +173,7 @@
 </div>
 
 <!--Buttons shown on the single validation page (both custom and published)-->
-<div *ngIf="!validationList && (publishingInProgress$|async)===false" class="col-sm pb-4" style="text-align: right;">
+<div *ngIf="!validationList" class="col-sm pb-4" style="text-align: right;">
   <div *ngIf="isOwner && validationRun.is_unpublished; else elseSingleValidation" style="float: right"
        [ngClass]="{'collapse': validationRun.publishing_in_progress}">
     <button pButton
@@ -299,7 +299,4 @@
 
     </div>
   </ng-template>
-</div>
-<div *ngIf="!validationList && (publishingInProgress$|async)" class="col-sm pb-4 text-muted" id="publishingInProgress">
-  <span class="pi pi-spin pi-spinner"></span> <span> Publishing in progress... </span>
 </div>
