handling verification if dataset has been published added

--- a/UI/src/app/pages/validation-result/validation-result.component.html
+++ b/UI/src/app/pages/validation-result/validation-result.component.html
@@ -1,4 +1,4 @@
-<main [ngClass]="{'non-scrollable': isPublishingWindowOpen}">
+<main>
   <div class="grid">
     <div class="col-12">
       <div *ngIf="(validationModel.validationRun|async) as validationRun" class="d-flex justify-content-center">
