--- a/UI/src/app/modules/validation-result/components/validation-summary/validation-summary.component.html
+++ b/UI/src/app/modules/validation-result/components/validation-summary/validation-summary.component.html
@@ -209,10 +209,10 @@
           <a target="_blank" href="{{getDoiPrefix()}}{{validationRun.doi }}">{{ validationRun.doi }}</a>.
         </li>
       </ul>
-      <qa-buttons *ngIf="!forComparison &&  !validationRun.publishing_in_progress" [validationList]="false"
+      <qa-buttons *ngIf="!forComparison && !validationRun.publishing_in_progress && (this.publishingInProgress$|async) === false" [validationList]="false"
                   [validationRun]="validationRun" (doUpdate)="update($event)" (openPublishWindow)="handlePublishWindow($event)"></qa-buttons>
 
-      <div *ngIf="validationRun.publishing_in_progress"
+      <div *ngIf="validationRun.publishing_in_progress || (this.publishingInProgress$|async)"
            style="float: right">
          <i class="pi pi-spin pi-spinner" style="font-size: 1rem"></i> Publishing in progress...
       </div>
@@ -221,7 +221,7 @@
   </p-panel>
 
   <p-dialog [modal]="true" [(visible)]="isPublishingWindowOpen">
-    <qa-publishing [validationId]="validationRun.id" (openPublishWindow)="handlePublishWindow($event)"></qa-publishing>
+    <qa-publishing [validationId]="validationRun.id" (openPublishWindow)="handlePublishWindow($event)" (startPublishing)="startPublishing()"></qa-publishing>
   </p-dialog>
 
 </main>
