--- a/UI/src/app/modules/dataset/components/dataset/dataset.component.html
+++ b/UI/src/app/modules/dataset/components/dataset/dataset.component.html
@@ -6,11 +6,13 @@
                 optionLabel="pretty_name" [style]="{'width': '100%'}">
       <ng-template let-item pTemplate="item">
           <span>
-            <span>{{item.pretty_name}} <em>{{item.user ? "  (user data)" : ''}}</em> </span>
+            <span>{{item.pretty_name}} <em>{{item.user === authService.currentUser.id ? "  (user data)" :
+              (item.user !== authService.currentUser.id && item.is_shared ? ' (shared data)' : "" )}}</em> </span>
           </span>
       </ng-template>
       <ng-template let-item pTemplate="selectedItem">
-         <span>{{item.pretty_name}} <em>{{item.user ? "  (user data)" : ''}}</em> </span>
+         <span>{{item.pretty_name}} <em>{{item.user === authService.currentUser.id ? "  (user data)" :
+           (item.user !== authService.currentUser.id && item.is_shared ? " (shared data)" : "" )}}</em> </span>
       </ng-template>
     </p-dropdown>
 
