--- a/UI/src/app/modules/validation-result/components/buttons/buttons.component.html
+++ b/UI/src/app/modules/validation-result/components/buttons/buttons.component.html
@@ -73,7 +73,8 @@
           <span style="margin-right: 0.5rem; margin-left: 0.2rem"><fa-icon [icon]="faIcons.faFileDownload"></fa-icon></span>
         </button>
       </div>
-      <button pButton
+      <button *ngIf="canBeRerun"
+              pButton
               routerLink="/validate/"
               class="dropdown-item"
               [queryParams]="{validation_id: validationRun.id}"
@@ -109,7 +110,7 @@
   </div>
   <!--published validations page only-->
   <span *ngIf="published">
-    <button *ngIf="isLogged"
+    <button *ngIf="isLogged && canBeRerun"
             pButton
             routerLink="/validate/"
             class="btn-action"
