file replaced with data set to make no confusion

--- a/UI/src/app/modules/validation-result/components/validationrun-row/validationrun-row.component.html
+++ b/UI/src/app/modules/validation-result/components/validationrun-row/validationrun-row.component.html
@@ -120,7 +120,7 @@
       <strong>Data:</strong><br/>
       <span *ngFor="let config of configurations">
         <span [style.color]="config.fileExists ? 'inherit' : 'red'"
-              [pTooltip]="config.fileExists ? '' : 'File has been removed' ">
+              [pTooltip]="config.fileExists ? '' : 'Data set has been removed' ">
           {{config.dataset}},
           {{config.version}},
           {{config.variable}}
