--- a/UI/src/app/modules/validation-result/components/validation-summary/validation-summary.component.html
+++ b/UI/src/app/modules/validation-result/components/validation-summary/validation-summary.component.html
@@ -88,7 +88,7 @@
               <em>{{validationConfigService.getInformationOnTheReference(config.is_spatial_reference,
                 config.is_temporal_reference, config.is_scaling_reference)}}
               </em>
-              <span *ngIf="!config.fileExists" style="color: red">(File has been removed)</span>
+              <span *ngIf="!config.fileExists" style="color: red">(Data set has been removed)</span>
               <br>
               <div *ngIf="config.filters.length > 0 || config.parametrisedFilters.length > 0">
                 Filters:
